<resources>
    <string name="app_name">ChooseAVechile</string>
    <string name="user_final_selection">Your Selection Details:</string>
    <string name="manufacturer">Manufacturer :</string>
    <string name="model">Model :</string>
    <string name="year">Year :</string>
    <string name="manufacturer_select">Enter a Manufacturer</string>
    <string name="model_select">Enter a Model</string>
    <string name="year_select">Enter a Year</string>
    <string name="submit">Submit</string>
    <string name="back">Back</string>
    <string name="loadmore">Load More Items</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
