<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.test.mycompany.chooseavechile.view.MainActivity">

    <TextView
        android:id="@+id/pageTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:text="@string/app_name" />

    <TableLayout
        android:id="@+id/userInputs"
        android:layout_below="@+id/pageTitle"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">
        <TableRow>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="@string/manufacturer" />
            <TextView
                android:id="@+id/manufacturer"
                android:layout_width="match_parent"
                android:padding="10dp"
                android:layout_marginLeft="10dp"
                android:layout_height="@dimen/header_height"
                android:layout_marginTop="@dimen/layout_margin_top"
                android:textColorHint="#9B9B9B"
                android:gravity="center_horizontal"
                android:background="@drawable/round_border_edittext"
                android:hint="@string/manufacturer_select" />

        </TableRow>

        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textStyle="bold"
                android:gravity="right"
                android:text="@string/model" />
            <TextView
                android:id="@+id/model"
                android:layout_width="match_parent"
                android:layout_height="@dimen/header_height"
                android:padding="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="@dimen/layout_margin_top"
                android:textColorHint="#9B9B9B"
                android:gravity="center_horizontal"
                android:background="@drawable/round_border_edittext"
                android:hint="@string/model_select" />

        </TableRow>

        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textStyle="bold"
                android:gravity="right"
                android:text="@string/year" />
            <TextView
                android:id="@+id/year"
                android:layout_width="match_parent"
                android:layout_height="@dimen/header_height"
                android:padding="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="@dimen/layout_margin_top"
                android:gravity="center_horizontal"
                android:background="@drawable/round_border_edittext"
                android:textColorHint="#9B9B9B"
                android:hint="@string/year_select" />

        </TableRow>

    </TableLayout>

    <Button
        android:layout_below="@+id/userInputs"
        android:layout_width="wrap_content"
        android:id="@+id/submitButton"
        android:textSize="16sp"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:clickable="true"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>
